Posibility to order a product has been developed finally (order, inventory, payment services + infra)

--- a/payment/build.gradle
+++ b/payment/build.gradle
@@ -1,6 +1,6 @@
 plugins {
 	id 'java'
-	id 'org.springframework.boot' version '2.7.11'
+	id 'org.springframework.boot' version '2.7.12'
 	id 'io.spring.dependency-management' version '1.0.15.RELEASE'
 }
 
@@ -8,16 +8,20 @@ group = 'com.saga'
 version = '0.0.1-SNAPSHOT'
 sourceCompatibility = '17'
 
+configurations {
+	compileOnly {
+		extendsFrom annotationProcessor
+	}
+}
+
 repositories {
 	mavenCentral()
 }
 
 dependencies {
-	implementation 'org.springframework.boot:spring-boot-starter-web'
-	implementation 'io.camunda:zeebe-client-java:1.2.6'
-	implementation 'org.springframework.boot:spring-boot-starter-json'
-	implementation 'javax.validation:validation-api:2.0.1.Final'
 	implementation 'org.springframework.boot:spring-boot-starter-data-mongodb'
+	implementation 'io.camunda:spring-zeebe-starter:8.2.1'
+	implementation 'org.springframework.boot:spring-boot-starter-json'
 
 	compileOnly "org.projectlombok:lombok:1.18.22"
 	annotationProcessor "org.projectlombok:lombok:1.18.22"
